deployments/fortune-teller-minikube/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-teller-app
  labels:
    k8s-app: fortune-teller-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: fortune-teller-app
  template:
    metadata:
      labels:
        k8s-app: fortune-teller-app
    spec:
      containers:
        - name: fortune-teller-app
          image: quay.io/kubernetes-ingress-controller/grpc-fortune-teller:0.1
          ports:
            - containerPort: 50051
              name: grpc
