deployments/fortune-teller-minikube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-service
  namespace: default
spec:
  selector:
    k8s-app: fortune-teller-app
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
