deployments/fortune-teller-minikube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/auth-tls-verify-client: \"on\"
    # nginx.ingress.kubernetes.io/auth-tls-secret: \"default/my-certs\"
    # nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: fortune-ingress
  namespace: default
spec:
  rules:
    - host: fortune-teller.info
      http:
        paths:
          - backend:
              serviceName: fortune-teller-service
              servicePort: grpc
  tls:
    - hosts:
      - fortune-teller.info
      # secretName: my-certs
